--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.10.15",
-    "@mui/material": "^5.10.15",
+    "@mui/material": "^5.10.17",
     "@mui/styled-engine-sc": "^5.10.14",
     "@popperjs/core": "^2.11.6",
     "@testing-library/jest-dom": "^5.16.5",
