--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "firebase": "^9.15.0",
+    "formik": "^2.2.9",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,7 +23,7 @@
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
-    "sweetalert2": "^11.6.14",
+    "sweetalert2": "^11.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
